[package]
name = "mav"
version = "0.1.0"
authors = ["Sky Mavis Engineering <engineering@skymavis.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
colored = "1.8.0"
duct = "0.12.0"
futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }
indicatif = "0.11.0"
os_pipe = "0.8.1"
reqwest = "0.9.20"
tokio = "0.1.22"
which = "2.0.1"
